New commands added for Vim mode

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -1,16 +1,24 @@
 
 [SCREEN]
-xkoef=1
-ykoef=1
+; Font parameters.
+; Fontname can be one of mono families: Courier New, Dejavu Sans Mono,
+; Lusida Console, Terminal.
+; screen_width and screen_height - a number of columns and rows.
+; cp - default codepage ( RU866, RU1251, "FR850", "FRWIN", "FRISO", "UTF8" )
 fontname=Dejavu Sans Mono
-;fontname=Lusida Console
 fontheight=24
 fontwidth=12
 screen_width=100
 screen_height=30
+;cp=RU866
 
 [OPTIONS]
-incsearch=on
+;defmode=0
+;incsearch=off
+;autoindent=off
+;syntax=On
+;cmdhismax=20
+;seahismax=20
 langmap_cp=RU1251
 langmap_upper=ÔÈÑÂÓÀÏĞØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×Íßİ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 langmap_lower=ôèñâóàïğøîëäüòùçéêûåãìö÷íÿı abcdefghijklmnopqrstuvwxyz'
@@ -20,6 +28,9 @@ p1=plug_prg_spis.hrb,prg,Functions list
 p2=plug_go_spis.hrb,go,Functions list
 
 [HILIGHT]
+;commands=
+;funcs=
+;quotes=
 comments=W/B
 
 [LANG_PRG]
@@ -37,7 +48,7 @@ mcomm=/* */
 case=on
 
 [LANG_GO]
-commands= bool break case const else false for func if import int int8 int16 int32 map nil package range return string struct switch true type var
+commands= bool break case const else false for func if import int8 int16 int32 int map nil package range return string struct switch true type var
 funcs=append make
 scomm=//
 mcomm=/* */
