--- a/hbedit.ini
+++ b/hbedit.ini
@@ -41,8 +41,8 @@ mcomm=/* */
 case=off
 
 [LANG_C]
-commands=auto break case char continue default do double enum exit else extern float for goto int long register return short sizeof static struct switch typedef union unsigned void while
-funcs=if memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy strncpy
+commands=auto break case char continue default do double enum exit else extern float for goto if int long register return short sizeof static struct switch typedef union unsigned void while
+funcs=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy strncpy
 scomm=//
 mcomm=/* */
 case=on
@@ -56,3 +56,10 @@ case=on
 
 [LANG_XML]
 mcomm=< >
+
+[LANG_PHP]
+commands=as catch echo else false foreach function global if new null return true try
+funcs=array empty isset require strpos substr
+scomm=//
+mcomm=/* */
+case=on
