--- a/hbedit.ini
+++ b/hbedit.ini
@@ -15,7 +15,7 @@ screen_height=30
 [OPTIONS]
 ;defmode=0
 ;incsearch=off
-;autoindent=off
+autoindent=on
 ;syntax=On
 ;cmdhismax=20
 ;seahismax=20
@@ -35,7 +35,7 @@ comments=W/B
 
 [LANG_PRG]
 commands=and case class data do else elseif end endcase enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static use while
-funcs=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite isalpha isdigit islower left len recno right set str stuff substr updated upper val valtype year
+funcs=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len rat recno right set str stuff substr updated upper val valtype year
 scomm=//
 mcomm=/* */
 case=off
