--- a/hbedit.ini
+++ b/hbedit.ini
@@ -25,7 +25,8 @@ langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎ abcdefghijklmnopqrstuvwxyz'
 
 [PLUGINS]
 p1=plug_prg_spis.hrb,prg,Functions list
-p2=plug_go_spis.hrb,go,Functions list
+p2=plug_prg_run.hrb,prg,Run code
+p3=plug_go_spis.hrb,go,Functions list
 
 [HILIGHT]
 ;commands=
