Fixes, few commands added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -2,10 +2,10 @@
 [SCREEN]
 ; Font parameters.
 ; Fontname can be one of mono families: Courier New, Dejavu Sans Mono,
-; Lusida Console, Terminal.
+; Liberation Mono, Lusida Console, Terminal.
 ; screen_width and screen_height - a number of columns and rows.
 ; cp - default codepage ( RU866, RU1251, "FR850", "FRWIN", "FRISO", "UTF8" )
-fontname=Dejavu Sans Mono
+fontname=Liberation Mono
 fontheight=24
 fontwidth=12
 screen_width=100
