--- a/hbedit.ini
+++ b/hbedit.ini
@@ -26,7 +26,8 @@ langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎ abcdefghijklmnopqrstuvwxyz'
 [PLUGINS]
 p1=plug_prg_spis.hrb,prg,Functions list
 p2=plug_prg_run.hrb,prg,Run code
-p3=plug_go_spis.hrb,go,Functions list
+p3=plug_prg_compile.hrb,prg,Compile plugin
+p4=plug_go_spis.hrb,go,Functions list
 
 [HILIGHT]
 ;commands=
