b/B implemtnted, eol and trimspaces added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -19,6 +19,8 @@ autoindent=on
 ;syntax=On
 ;cmdhismax=20
 ;seahismax=20
+;eol=0
+;trimspaces=off
 langmap_cp=RU1251
 langmap_upper=װֲָׁ׃ְֿ׀״־ִֻÜׂÙַֹÊÛֳֵּײ׳ֽßÝ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎ abcdefghijklmnopqrstuvwxyz'
