--- a/hbedit.ini
+++ b/hbedit.ini
@@ -19,8 +19,13 @@ autoindent=on
 ;syntax=On
 ;cmdhismax=20
 ;seahismax=20
+; eol: 0 - auto, 1 - Linux, 2 - Dos
 ;eol=0
 ;trimspaces=off
+;colormain=BG+/B
+;colorsel=N/W
+;color=N/BG
+;colorbra=R+/B
 langmap_cp=RU1251
 langmap_upper=װֲָׁ׃ְֿ׀״־ִֻÜׂÙַֹÊÛֳֵּײ׳ֽßÝ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎ abcdefghijklmnopqrstuvwxyz'
