--- a/hbedit.ini
+++ b/hbedit.ini
@@ -37,28 +37,33 @@ p3=plug_prg_compile.hrb,prg,Compile plugin
 p4=plug_go_spis.hrb,go,Functions list
 
 [HILIGHT]
-;commands=
-;funcs=
+;keywords1=
+;keywords2=
+;keywords3=
+;keywords4=
 ;quotes=
-comments=W/B
+;slcomments=
+;startline=
+;block1=
+;block2=
 
 [LANG_PRG]
-commands=and case class data do else elseif end endcase enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static use while
-funcs=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len rat recno right set str stuff substr updated upper val valtype year
+keywords1=and case class continue data do else elseif end endcase endclass enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static use while
+keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len rat recno right set str stuff substr updated upper val valtype year
 scomm=//
 mcomm=/* */
 case=off
 
 [LANG_C]
-commands=auto break case char continue default do double enum exit else extern float for goto if int long register return short sizeof static struct switch typedef union unsigned void while
-funcs=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy strncpy
+keywords1=auto break case char continue default do double enum exit else extern float for goto if int long register return short sizeof static struct switch typedef union unsigned void while
+keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy strncpy
 scomm=//
 mcomm=/* */
 case=on
 
 [LANG_GO]
-commands= bool break case const else false for func if import int8 int16 int32 int map nil package range return string struct switch true type var
-funcs=append make
+keywords1= bool break case const else false for func if import int8 int16 int32 int map nil package range return string struct switch true type var
+keywords2=append make
 scomm=//
 mcomm=/* */
 case=on
@@ -67,8 +72,8 @@ case=on
 mcomm=< >
 
 [LANG_PHP]
-commands=as catch echo else false foreach function global if new null return true try
-funcs=array empty isset require strpos substr
+keywords1=as catch echo else false foreach function global if new null return true try
+keywords2=array empty isset require strpos substr
 scomm=//
 mcomm=/* */
 case=on
