--- a/hbedit.ini
+++ b/hbedit.ini
@@ -12,6 +12,9 @@ screen_width=100
 screen_height=30
 ;cp=RU866
 
+[START]
+;plugin=
+
 [OPTIONS]
 ;defmode=0
 ;incsearch=off
@@ -48,6 +51,7 @@ p4=plug_go_spis.hrb,go,Functions list
 ;block2=
 
 [LANG_PRG]
+ext=.prg
 keywords1=and case class continue data do else elseif end endcase endclass enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static use while
 keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len rat recno right set str stuff substr updated upper val valtype year
 scomm=//
@@ -55,6 +59,7 @@ mcomm=/* */
 case=off
 
 [LANG_C]
+ext=.c.cpp
 keywords1=auto break case char continue default do double enum exit else extern float for goto if int long register return short sizeof static struct switch typedef union unsigned void while
 keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy strncpy
 scomm=//
@@ -62,6 +67,7 @@ mcomm=/* */
 case=on
 
 [LANG_GO]
+ext=.go
 keywords1= bool break case const else false for func if import int8 int16 int32 int map nil package range return string struct switch true type var
 keywords2=append make
 scomm=//
@@ -69,9 +75,11 @@ mcomm=/* */
 case=on
 
 [LANG_XML]
+ext=.xml.fb2.htm.html
 mcomm=< >
 
 [LANG_PHP]
+ext=.php
 keywords1=as catch echo else false foreach function global if new null return true try
 keywords2=array empty isset require strpos substr
 scomm=//
