edi_IniRead() added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -53,7 +53,7 @@ p4=plug_go_spis.hrb,go,Functions list
 [LANG_PRG]
 ext=.prg
 keywords1=and case class continue data do else elseif end endcase endclass enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static use while
-keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len rat recno right set str stuff substr updated upper val valtype year
+keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len ltrim rat recno right set str stuff substr trim updated upper val valtype year
 scomm=//
 mcomm=/* */
 case=off
