Fixes, pluginn added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -22,9 +22,10 @@ autoindent=on
 ;syntax=On
 ;cmdhismax=20
 ;seahismax=20
+edithismax=30
 ; eol: 0 - auto, 1 - Linux, 2 - Dos
 ;eol=0
-;trimspaces=off
+trimspaces=on
 ;colormain=BG+/B
 ;colorsel=N/W
 ;color=N/BG
@@ -38,6 +39,7 @@ p1=plug_prg_spis.hrb,prg,Functions list
 p2=plug_prg_run.hrb,prg,Run code
 p3=plug_prg_compile.hrb,prg,Compile plugin
 p4=plug_go_spis.hrb,go,Functions list
+p5=plug_c_spis.hrb,c,Functions list
 
 [HILIGHT]
 ;keywords1=
@@ -45,10 +47,9 @@ p4=plug_go_spis.hrb,go,Functions list
 ;keywords3=
 ;keywords4=
 ;quotes=
-;slcomments=
+;scomm=
 ;startline=
-;block1=
-;block2=
+;mcomm=
 
 [LANG_PRG]
 ext=.prg
@@ -85,3 +86,8 @@ keywords2=array empty isset require strpos substr
 scomm=//
 mcomm=/* */
 case=on
+
+[LANG_INI]
+ext=.ini
+scomm=;
+mcomm=W+/B,[ ]
