--- a/hbedit.ini
+++ b/hbedit.ini
@@ -63,6 +63,7 @@ case=off
 ext=.c.cpp
 keywords1=auto break case char continue default do double enum exit else extern float for goto if int long register return short sizeof static struct switch typedef union unsigned void while
 keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy strncpy
+keywords3=HB_FUNC hb_parni hb_parc hb_retni hb_retc
 scomm=//
 mcomm=/* */
 case=on
