g. added, lang bat added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -92,3 +92,8 @@ case=on
 ext=.ini
 scomm=;
 mcomm=W+/B,[ ]
+
+[LANG_BAT]
+ext=.bat
+keywords1=del echo errorlevel exist goto if md not off set
+scomm=rem
