lower/upper for utf8, setting codepages in ini

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -34,6 +34,13 @@ langmap_cp=RU1251
 langmap_upper=װֲָׁ׃ְֿ׀״־ִֻÜׂÙַֹÊÛֳֵּײ׳ֽßÝ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎ abcdefghijklmnopqrstuvwxyz'
 
+[CODEPAGES]
+; Add here any codepage, supported by Harbour
+cp1=RU866
+cp2=RU1251
+cp3=RUKOI8
+cp4=UTF8
+
 [PLUGINS]
 p1=plug_prg_spis.hrb,prg,Functions list
 p2=plug_prg_run.hrb,prg,Run code
