--- a/hbedit.ini
+++ b/hbedit.ini
@@ -20,6 +20,9 @@ screen_height=30
 ;incsearch=off
 autoindent=on
 ;syntax=On
+; savehis: 0 - don't save the history, 1 (default) - save in hbedit directory,
+; 2 - save in a current directory.
+;savehis=1
 ;cmdhismax=20
 ;seahismax=20
 edithismax=30
