Some Vim commands added, startline hilight option implemented

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -63,10 +63,11 @@ p5=plug_c_spis.hrb,c,Functions list
 
 [LANG_PRG]
 ext=.prg
-keywords1=and case class continue data do else elseif end endcase endclass enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static use while
+keywords1=and case class continue data do else elseif end endcase endclass enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static switch use while
 keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len ltrim rat recno right set str stuff substr trim updated upper val valtype year
 scomm=//
 mcomm=/* */
+startline=G+/B,#
 case=off
 
 [LANG_C]
@@ -76,6 +77,7 @@ keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy
 keywords3=HB_FUNC hb_parni hb_parc hb_retni hb_retc
 scomm=//
 mcomm=/* */
+startline=G+/B,#
 case=on
 
 [LANG_GO]
@@ -107,3 +109,4 @@ mcomm=W+/B,[ ]
 ext=.bat
 keywords1=del echo errorlevel exist goto if md not off set
 scomm=rem
+startline=G+/B,:
