Fixes, a pair of plugins added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -50,6 +50,8 @@ p2=plug_prg_run.hrb,prg,Run code
 p3=plug_prg_compile.hrb,prg,Compile plugin
 p4=plug_go_spis.hrb,go,Functions list
 p5=plug_c_spis.hrb,c,Functions list
+p6=plug_go_run.hrb,go,Run code
+p7=plug_go_fmt.hrb,go,Format code
 
 [HILIGHT]
 ;keywords1=
@@ -110,3 +112,9 @@ ext=.bat
 keywords1=del echo errorlevel exist goto if md not off set
 scomm=rem
 startline=G+/B,:
+
+[LANG_HBP]
+ext=.hbp
+scomm=W+/B,-
+startline=W/B,#
+mcomm=G+/B,{ }
