Fixes, hbp init plugin added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -14,6 +14,7 @@ screen_height=30
 
 [START]
 ;plugin=
+;maximize=Off
 
 [OPTIONS]
 ;defmode=0
@@ -115,6 +116,7 @@ startline=G+/B,:
 
 [LANG_HBP]
 ext=.hbp
+plugin=plug_hbp_init.hrb
 scomm=W+/B,-
 startline=W/B,#
 mcomm=G+/B,{ }
