Fixes, files option added to a [START] section of ini

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -4,7 +4,7 @@
 ; Fontname can be one of mono families: Courier New, Dejavu Sans Mono,
 ; Liberation Mono, Lusida Console, Terminal.
 ; screen_width and screen_height - a number of columns and rows.
-; cp - default codepage ( RU866, RU1251, "FR850", "FRWIN", "FRISO", "UTF8" )
+; cp - default codepage ( RU866, RU1251, UTF8, ... )
 fontname=Liberation Mono
 fontheight=24
 fontwidth=12
@@ -13,8 +13,12 @@ screen_height=30
 ;cp=RU866
 
 [START]
+; A plugin name to be launched at start, before any file is opened.
 ;plugin=
+; Maximize editor window at start.
 ;maximize=Off
+; Files list, divided by commas, to be opened at start.
+;files=
 
 [OPTIONS]
 ;defmode=0
