--- a/hbedit.ini
+++ b/hbedit.ini
@@ -41,6 +41,8 @@ trimspaces=on
 langmap_cp=RU1251
 langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý abcdefghijklmnopqrstuvwxyz'
+; keymap option allows to redefine keys as in example below.
+;keymap=Ctrl-N=>Shift-F4,Ctrl-O=>Ctrl-F4
 
 [CODEPAGES]
 ; Add here any codepage, supported by Harbour
