bWriteTopPane, :PosToCol(), :RowToLine() added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -38,6 +38,7 @@ trimspaces=on
 ;colorsel=N/W
 ;color=N/BG
 ;colorbra=R+/B
+;tablen=4
 langmap_cp=RU1251
 langmap_upper=װֲָׁ׃ְֿ׀״־ִֻÜׂÙַֹÊÛֳֵּײ׳ֽßÝ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎ abcdefghijklmnopqrstuvwxyz'
