Fixes, plug_go_build plugin added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -59,7 +59,8 @@ p3=plug_prg_compile.hrb,prg,Compile plugin
 p4=plug_go_spis.hrb,go,Functions list
 p5=plug_c_spis.hrb,c,Functions list
 p6=plug_go_run.hrb,go,Run code
-p7=plug_go_fmt.hrb,go,Format code
+p7=plug_go_build.hrb,go,Build
+p8=plug_go_fmt.hrb,go,Format code
 
 [HILIGHT]
 ;keywords1=
