Comments added to hbedit.ini

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -38,7 +38,10 @@ trimspaces=on
 ;colorsel=N/W
 ;color=N/BG
 ;colorbra=R+/B
+; tablen (default = 4) - a number of columns for one tab
 ;tablen=4
+; tabtospaces (default = Off) - if On, tabs are converted to spaces
+;tabtospaces=Off
 langmap_cp=RU1251
 langmap_upper=װֲָׁ׃ְֿ׀״־ִֻÜׂÙַֹÊÛֳֵּײ׳ֽßÝ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
 langmap_lower=פטסגףאןנרמכהüעשחיךûודלצקםÿ‎ abcdefghijklmnopqrstuvwxyz'
