--- a/hbedit.ini
+++ b/hbedit.ini
@@ -64,6 +64,7 @@ p5=plug_c_spis.hrb,c,Functions list
 p6=plug_go_run.hrb,go,Run code
 p7=plug_go_build.hrb,go,Build
 p8=plug_go_fmt.hrb,go,Format code
+p9=plug_chartable.hrb,,CharTable
 
 [HILIGHT]
 ;keywords1=
