calculator plugin added to ini and build scripts

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -65,6 +65,7 @@ p6=plug_go_run.hrb,go,Run code
 p7=plug_go_build.hrb,go,Build
 p8=plug_go_fmt.hrb,go,Format code
 p9=plug_chartable.hrb,,CharTable
+p10=plug_calculator.hrb,,Calcularor
 
 [HILIGHT]
 ;keywords1=
