--- a/hbedit.ini
+++ b/hbedit.ini
@@ -43,8 +43,8 @@ trimspaces=on
 ; tabtospaces (default = Off) - if On, tabs are converted to spaces
 ;tabtospaces=Off
 langmap_cp=RU1251
-langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý abcdefghijklmnopqrstuvwxyz'
+langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ¨ ABCDEFGHIJKLMNOPQRSTUVWXYZ"~
+langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý¸ abcdefghijklmnopqrstuvwxyz'`
 ; keymap option allows to redefine keys as in example below.
 ;keymap=Ctrl-N=>Shift-F4,Ctrl-O=>Ctrl-F4
 
