--- a/hbedit.ini
+++ b/hbedit.ini
@@ -85,6 +85,7 @@ scomm=//
 mcomm=/* */
 startline=G+/B,#
 case=off
+brackets=On
 
 [LANG_C]
 ext=.c.cpp
@@ -95,6 +96,7 @@ scomm=//
 mcomm=/* */
 startline=G+/B,#
 case=on
+brackets=On
 
 [LANG_GO]
 ext=.go
@@ -103,6 +105,7 @@ keywords2=append make
 scomm=//
 mcomm=/* */
 case=on
+brackets=On
 
 [LANG_XML]
 ext=.xml.fb2.htm.html
@@ -115,6 +118,7 @@ keywords2=array empty isset require strpos substr
 scomm=//
 mcomm=/* */
 case=on
+brackets=On
 
 [LANG_INI]
 ext=.ini
