--- a/hbedit.ini
+++ b/hbedit.ini
@@ -137,3 +137,10 @@ plugin=plug_hbp_init.hrb
 scomm=W+/B,-
 startline=W/B,#
 mcomm=G+/B,{ }
+
+[LANG_1C]
+ext=.1c
+keywords1=do each enddo endif for if then while
+keywords2=для каждого если конецесли пока цикл конеццикла тогда
+scomm=//
+brackets=On
