--- a/hbedit.ini
+++ b/hbedit.ini
@@ -66,6 +66,7 @@ p7=plug_go_build.hrb,go,Build
 p8=plug_go_fmt.hrb,go,Format code
 p9=plug_chartable.hrb,,CharTable
 p10=plug_calculator.hrb,,Calcularor
+p11=plug_tetris.hrb,,Tetris
 
 [HILIGHT]
 ;keywords1=
