--- a/hbedit.ini
+++ b/hbedit.ini
@@ -20,6 +20,14 @@ screen_height=30
 ; Files list, divided by commas, to be opened at start.
 ;files=
 
+[PALETTE_1]
+name=far
+colors=#000000, #000080, #00AA00, #008080, #AA0000, #AA00AA, #AA5500, #c8c8c8, #555555, #5555FF, #55FF55, #55FFFF, #FF5555, #FF55FF, #FFFF55, #FFFFFF
+
+[PALETTE_2]
+name=solarized
+colors=#002B36, #073642, #586E75, #657B83, #839496, #93A1A1, #EEE8D5, #FDF6E3, #B58900, #CB4B16, #DC322F, #D33682, #6C71C4, #268BD2, #2AA198, #859900
+
 [OPTIONS]
 ;defmode=0
 ;incsearch=off
@@ -34,6 +42,7 @@ edithismax=30
 ; eol: 0 - auto, 1 - Linux, 2 - Dos
 ;eol=0
 trimspaces=on
+palette=far
 ;colormain=BG+/B
 ;colorsel=N/W
 ;color=N/BG
