Palettes support extended

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -20,13 +20,68 @@ screen_height=30
 ; Files list, divided by commas, to be opened at start.
 ;files=
 
+[HILIGHT]
+;colormain=BG+/B
+;colorsel=N/W
+;colorpane=N/BG
+;colorbra=R+/B
+;colormenu=W+/BG
+;colormenusel=GR+/RB
+;colorwb=W+/N
+;colorget=N+/BG
+;keywords1=
+;keywords2=
+;keywords3=
+;keywords4=
+;quotes=
+;scomm=
+startline=G+/B
+;mcomm=
+
 [PALETTE_1]
 name=far
+; N, B, G, BG, R, RB, GR, W,  N+, B+, G+, BG+, R+, RB+, GR+, W+
 colors=#000000, #000080, #00AA00, #008080, #AA0000, #AA00AA, #AA5500, #c8c8c8, #555555, #5555FF, #55FF55, #55FFFF, #FF5555, #FF55FF, #FFFF55, #FFFFFF
 
 [PALETTE_2]
-name=solarized
+name=solarized dark
 colors=#002B36, #073642, #586E75, #657B83, #839496, #93A1A1, #EEE8D5, #FDF6E3, #B58900, #CB4B16, #DC322F, #D33682, #6C71C4, #268BD2, #2AA198, #859900
+colormain=RB/N
+colorsel=N/W
+colorpane=N/BG
+colorbra=G+/N
+colormenu=B/GR
+colormenusel=W/R
+colorwb=W/N
+colorget=G/GR
+keywords1=GR+/N
+keywords2=RB+/N
+keywords3=RB+/N
+keywords4=RB+/N
+quotes=N+/N
+scomm=G/N
+startline=W+/N
+mcomm=G/N
+
+[PALETTE_3]
+name=solarized mid
+colors=#002B36, #073642, #586E75, #657B83, #839496, #93A1A1, #EEE8D5, #FDF6E3, #B58900, #CB4B16, #DC322F, #D33682, #6C71C4, #268BD2, #2AA198, #859900
+colormain=RB/B
+colorsel=N/W
+colorpane=N/BG
+colorbra=G+/B
+colormenu=B/GR
+colormenusel=W/R
+colorwb=W/N
+colorget=G/GR
+keywords1=GR+/B
+keywords2=RB+/B
+keywords3=RB+/B
+keywords4=RB+/B
+quotes=N+/B
+scomm=G/B
+startline=W+/B
+mcomm=G/B
 
 [OPTIONS]
 ;defmode=0
@@ -45,7 +100,7 @@ trimspaces=on
 palette=far
 ;colormain=BG+/B
 ;colorsel=N/W
-;color=N/BG
+;colorpane=N/BG
 ;colorbra=R+/B
 ; tablen (default = 4) - a number of columns for one tab
 ;tablen=4
@@ -77,23 +132,13 @@ p9=plug_chartable.hrb,,CharTable
 p10=plug_calculator.hrb,,Calcularor
 p11=plug_tetris.hrb,,Tetris
 
-[HILIGHT]
-;keywords1=
-;keywords2=
-;keywords3=
-;keywords4=
-;quotes=
-;scomm=
-;startline=
-;mcomm=
-
 [LANG_PRG]
 ext=.prg
 keywords1=and case class continue data do else elseif end endcase endclass enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static switch use while
 keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len lower ltrim rat recno right set str stuff substr trim updated upper val valtype year
 scomm=//
 mcomm=/* */
-startline=G+/B,#
+startline=#
 case=off
 brackets=On
 
@@ -104,7 +149,7 @@ keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy
 keywords3=HB_FUNC hb_parni hb_parc hb_retni hb_retc
 scomm=//
 mcomm=/* */
-startline=G+/B,#
+startline=#
 case=on
 brackets=On
 
@@ -139,14 +184,14 @@ mcomm=W+/B,[ ]
 ext=.bat
 keywords1=del echo errorlevel exist goto if md not off set
 scomm=rem
-startline=G+/B,:
+startline=:
 
 [LANG_HBP]
 ext=.hbp
 plugin=plug_hbp_init.hrb
 scomm=W+/B,-
 startline=W/B,#
-mcomm=G+/B,{ }
+mcomm={ }
 
 [LANG_1C]
 ext=.1c
