Palettes support extended

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -53,6 +53,7 @@ colorbra=G+/N
 colormenu=B/GR
 colormenusel=W/R
 colorwb=W/N
+colorwr=B/W
 colorget=G/GR
 keywords1=GR+/N
 keywords2=RB+/N
@@ -73,6 +74,7 @@ colorbra=G+/B
 colormenu=B/GR
 colormenusel=W/R
 colorwb=W/N
+colorwr=B/W
 colorget=G/GR
 keywords1=GR+/B
 keywords2=RB+/B
