--- a/hbedit.ini
+++ b/hbedit.ini
@@ -55,13 +55,13 @@ colormenusel=W/R
 colorwb=W/N
 colorwr=B/W
 colorget=G/GR
-keywords1=GR+/N
+keywords1=W+/N
 keywords2=RB+/N
-keywords3=RB+/N
+keywords3=GR+/N
 keywords4=RB+/N
 quotes=N+/N
 scomm=G/N
-startline=W+/N
+startline=B+/N
 mcomm=G/N
 
 [PALETTE_3]
@@ -76,14 +76,35 @@ colormenusel=W/R
 colorwb=W/N
 colorwr=B/W
 colorget=G/GR
-keywords1=GR+/B
+keywords1=W+/B
 keywords2=RB+/B
-keywords3=RB+/B
+keywords3=GR+/B
 keywords4=RB+/B
 quotes=N+/B
 scomm=G/B
-startline=W+/B
+startline=B+/B
 mcomm=G/B
+
+[PALETTE_4]
+name=solarized light
+colors=#002B36, #073642, #586E75, #657B83, #839496, #93A1A1, #EEE8D5, #FDF6E3, #B58900, #CB4B16, #DC322F, #D33682, #6C71C4, #268BD2, #2AA198, #859900
+colormain=B/GR
+colorsel=GR/RB
+colorpane=N/BG
+colorbra=G+/GR
+colormenu=B/GR
+colormenusel=W/R
+colorwb=W/N
+colorwr=B/W
+colorget=G/GR
+keywords1=W+/GR
+keywords2=RB+/GR
+keywords3=GR+/GR
+keywords4=RB+/GR
+quotes=N+/GR
+scomm=RB/GR
+startline=B+/GR
+mcomm=RB/GR
 
 [OPTIONS]
 ;defmode=0
@@ -146,9 +167,10 @@ brackets=On
 
 [LANG_C]
 ext=.c.cpp
-keywords1=auto break case char continue default do double enum exit else extern float for goto if int long register return short sizeof static struct switch typedef union unsigned void while
-keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp ctrcpy strncpy
-keywords3=HB_FUNC hb_parni hb_parc hb_retni hb_retc
+keywords1=auto break case continue default do exit else enum extern for goto if return short sizeof static struct switch typedef union while
+keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp strcpy strncpy
+keywords3=char double float int long NULL register unsigned void 
+keywords4=HB_FUNC hb_parni hb_parc hb_retni hb_retc
 scomm=//
 mcomm=/* */
 startline=#
