Palettes support extended

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -20,6 +20,55 @@ screen_height=30
 ; Files list, divided by commas, to be opened at start.
 ;files=
 
+[OPTIONS]
+;defmode=0
+;incsearch=off
+autoindent=on
+;syntax=On
+; savehis: 0 - don't save the history, 1 (default) - save in hbedit directory,
+; 2 - save in a current directory.
+;savehis=1
+;cmdhismax=20
+;seahismax=20
+edithismax=30
+; eol: 0 - auto, 1 - Linux, 2 - Dos
+;eol=0
+trimspaces=on
+palette=far
+;colormain=BG+/B
+;colorsel=N/W
+;colorpane=N/BG
+;colorbra=R+/B
+; tablen (default = 4) - a number of columns for one tab
+;tablen=4
+; tabtospaces (default = Off) - if On, tabs are converted to spaces
+;tabtospaces=Off
+langmap_cp=RU1251
+langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ¨ ABCDEFGHIJKLMNOPQRSTUVWXYZ"~
+langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý¸ abcdefghijklmnopqrstuvwxyz'`
+; keymap option allows to redefine keys as in example below.
+;keymap=Ctrl-N=>Shift-F4,Ctrl-O=>Ctrl-F4
+
+[CODEPAGES]
+; Add here any codepage, supported by Harbour
+cp1=RU866
+cp2=RU1251
+cp3=RUKOI8
+cp4=UTF8
+
+[PLUGINS]
+p1=plug_prg_spis.hrb,prg,Functions list
+p2=plug_prg_run.hrb,prg,Run code
+p3=plug_prg_compile.hrb,prg,Compile plugin
+p4=plug_go_spis.hrb,go,Functions list
+p5=plug_c_spis.hrb,c,Functions list
+p6=plug_go_run.hrb,go,Run code
+p7=plug_go_build.hrb,go,Build
+p8=plug_go_fmt.hrb,go,Format code
+p9=plug_chartable.hrb,,CharTable
+p10=plug_calculator.hrb,,Calcularor
+p11=plug_tetris.hrb,,Tetris
+
 [HILIGHT]
 ;colormain=BG+/B
 ;colorsel=N/W
@@ -38,10 +87,31 @@ screen_height=30
 startline=G+/B
 ;mcomm=
 
-[PALETTE_1]
+[PALETTE_0]
 name=far
 ; N, B, G, BG, R, RB, GR, W,  N+, B+, G+, BG+, R+, RB+, GR+, W+
 colors=#000000, #000080, #00AA00, #008080, #AA0000, #AA00AA, #AA5500, #c8c8c8, #555555, #5555FF, #55FF55, #55FFFF, #FF5555, #FF55FF, #FFFF55, #FFFFFF
+
+[PALETTE_1]
+name=notepad
+colors=#000000, #000080, #00AA00, #008080, #AA0000, #AA00AA, #AA5500, #FFFFFF, #555555, #5555FF, #55FF55, #55FFFF, #FF5555, #FF55FF, #FFFF55, #C8C8C8
+colormain=N+/W
+colorsel=W/BG
+colorpane=GR+/B
+colorbra=R/W
+colormenu=W+/B
+colormenusel=W/BG
+colorwb=W/N
+colorwr=W/R
+colorget=N+/BG
+keywords1=B/W
+keywords2=B/W
+keywords3=B/W
+keywords4=B/W
+quotes=GR/W
+scomm=G/W
+startline=RB/W
+mcomm=G/W
 
 [PALETTE_2]
 name=solarized dark
@@ -105,55 +175,6 @@ quotes=N+/GR
 scomm=RB/GR
 startline=B+/GR
 mcomm=RB/GR
-
-[OPTIONS]
-;defmode=0
-;incsearch=off
-autoindent=on
-;syntax=On
-; savehis: 0 - don't save the history, 1 (default) - save in hbedit directory,
-; 2 - save in a current directory.
-;savehis=1
-;cmdhismax=20
-;seahismax=20
-edithismax=30
-; eol: 0 - auto, 1 - Linux, 2 - Dos
-;eol=0
-trimspaces=on
-palette=far
-;colormain=BG+/B
-;colorsel=N/W
-;colorpane=N/BG
-;colorbra=R+/B
-; tablen (default = 4) - a number of columns for one tab
-;tablen=4
-; tabtospaces (default = Off) - if On, tabs are converted to spaces
-;tabtospaces=Off
-langmap_cp=RU1251
-langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ¨ ABCDEFGHIJKLMNOPQRSTUVWXYZ"~
-langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý¸ abcdefghijklmnopqrstuvwxyz'`
-; keymap option allows to redefine keys as in example below.
-;keymap=Ctrl-N=>Shift-F4,Ctrl-O=>Ctrl-F4
-
-[CODEPAGES]
-; Add here any codepage, supported by Harbour
-cp1=RU866
-cp2=RU1251
-cp3=RUKOI8
-cp4=UTF8
-
-[PLUGINS]
-p1=plug_prg_spis.hrb,prg,Functions list
-p2=plug_prg_run.hrb,prg,Run code
-p3=plug_prg_compile.hrb,prg,Compile plugin
-p4=plug_go_spis.hrb,go,Functions list
-p5=plug_c_spis.hrb,c,Functions list
-p6=plug_go_run.hrb,go,Run code
-p7=plug_go_build.hrb,go,Build
-p8=plug_go_fmt.hrb,go,Format code
-p9=plug_chartable.hrb,,CharTable
-p10=plug_calculator.hrb,,Calcularor
-p11=plug_tetris.hrb,,Tetris
 
 [LANG_PRG]
 ext=.prg
