Vertical block summ calculation added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -48,6 +48,7 @@ langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ¨ ABCDEFGHIJKLMNOPQRSTUVWXYZ"~
 langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý¸ abcdefghijklmnopqrstuvwxyz'`
 ; keymap option allows to redefine keys as in example below.
 ;keymap=Ctrl-N=>Shift-F4,Ctrl-O=>Ctrl-F4
+sele_plugin=plug_selection.hrb
 
 [CODEPAGES]
 ; Add here any codepage, supported by Harbour
