--- a/hbedit.ini
+++ b/hbedit.ini
@@ -186,9 +186,9 @@ brackets=On
 [LANG_C]
 ext=.c.cpp
 keywords1=auto break case continue default do exit else enum extern for goto if return short sizeof static struct switch typedef union while
-keywords2=memcpy memset printf scanf strlen strchr strnchr strcmp strncmp strcpy strncpy
-keywords3=char double float int long NULL register unsigned void 
-keywords4=HB_FUNC hb_parni hb_parc hb_retni hb_retc
+keywords2=fopen fclose open close memcpy memset sprintf sscanf strlen strchr strnchr strcmp strncmp strcpy strncpy
+keywords3=char double float int long NULL register unsigned void
+keywords4=HB_FUNC hb_parl hb_parni hb_parc hb_retl hb_retni hb_retc
 scomm=//
 mcomm=/* */
 startline=#
