plugin shortcuts implemented

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -54,12 +54,12 @@ cp3=RUKOI8
 cp4=UTF8
 
 [PLUGINS]
-p1=plug_prg_spis.hrb,prg,Functions list
-p2=plug_prg_run.hrb,prg,Run code
+p1=plug_prg_spis.hrb,prg,Functions list,Alt-L
+p2=plug_prg_run.hrb,prg,Run code,Alt-R
 p3=plug_prg_compile.hrb,prg,Compile plugin
-p4=plug_go_spis.hrb,go,Functions list
-p5=plug_c_spis.hrb,c,Functions list
-p6=plug_go_run.hrb,go,Run code
+p4=plug_go_spis.hrb,go,Functions list,Alt-L
+p5=plug_c_spis.hrb,c,Functions list,Alt-L
+p6=plug_go_run.hrb,go,Run code,Alt-R
 p7=plug_go_build.hrb,go,Build
 p8=plug_go_fmt.hrb,go,Format code
 p9=plug_chartable.hrb,,CharTable
