--- a/hbedit.ini
+++ b/hbedit.ini
@@ -65,6 +65,7 @@ p8=plug_go_fmt.hrb,go,Format code
 p9=plug_chartable.hrb,,CharTable
 p10=plug_calculator.hrb,,Calcularor
 p11=plug_tetris.hrb,,Tetris
+p12=plug_webservices.hrb,,WebServices
 
 [HILIGHT]
 ;colormain=BG+/B
