--- a/hbedit.ini
+++ b/hbedit.ini
@@ -176,6 +176,7 @@ mcomm=RB/GR
 
 [LANG_PRG]
 ext=.prg
+plugin=plug_prg_init.hrb
 keywords1=and case class continue data do else elseif end endcase endclass enddo endif exit for func function if local loop method next or private proc procedure public request return set seek skip static switch use while
 keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif isalpha isdigit islower left len lower ltrim rat recno right set str stuff substr trim updated upper val valtype year
 scomm=//
