--- a/hbedit.ini
+++ b/hbedit.ini
@@ -40,8 +40,8 @@ palette=far
 ; tabtospaces (default = Off) - if On, tabs are converted to spaces
 ;tabtospaces=Off
 langmap_cp=RU1251
-langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ¨ ABCDEFGHIJKLMNOPQRSTUVWXYZ"~
-langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý¸ abcdefghijklmnopqrstuvwxyz'`
+langmap_upper=ÔÈÑÂÓÀÏÐØÎËÄÜÒÙÇÉÊÛÅÃÌÖ×ÍßÝ¨Þ ABCDEFGHIJKLMNOPQRSTUVWXYZ"~>
+langmap_lower=ôèñâóàïðøîëäüòùçéêûåãìö÷íÿý¸þ abcdefghijklmnopqrstuvwxyz'`.
 ; keymap option allows to redefine keys as in example below.
 ;keymap=Ctrl-N=>Shift-F4,Ctrl-O=>Ctrl-F4
 sele_plugin=plug_selection.hrb
