--- a/hbedit.ini
+++ b/hbedit.ini
@@ -66,6 +66,7 @@ p9=plug_chartable.hrb,,CharTable
 p10=plug_calculator.hrb,,Calcularor
 p11=plug_tetris.hrb,,Tetris
 p12=plug_webservices.hrb,,WebServices
+p13=plug_vcs.hrb,,Git/Fossil
 
 [HILIGHT]
 ;colormain=BG+/B
