--- a/hbedit.ini
+++ b/hbedit.ini
@@ -23,6 +23,7 @@ screen_height=30
 [OPTIONS]
 ;defmode=0
 ;incsearch=off
+;pathinhead=off
 autoindent=on
 ;syntax=On
 ; savehis: 0 - don't save the history, 1 (default) - save in hbedit directory,
