keywords5 option added to hilight engine

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -82,6 +82,7 @@ p13=plug_vcs.hrb,,Git/Fossil
 ;keywords2=
 ;keywords3=
 ;keywords4=
+;keywords5=
 ;quotes=
 ;scomm=
 startline=G+/B
@@ -108,6 +109,7 @@ keywords1=B/W
 keywords2=B/W
 keywords3=B/W
 keywords4=B/W
+keywords5=B/W
 quotes=GR/W
 scomm=G/W
 startline=RB/W
@@ -129,6 +131,7 @@ keywords1=W+/N
 keywords2=RB+/N
 keywords3=GR+/N
 keywords4=RB+/N
+keywords5=RB+/N
 quotes=N+/N
 scomm=G/N
 startline=B+/N
@@ -150,6 +153,7 @@ keywords1=W+/B
 keywords2=RB+/B
 keywords3=GR+/B
 keywords4=RB+/B
+keywords5=RB+/B
 quotes=N+/B
 scomm=G/B
 startline=B+/B
@@ -170,7 +174,7 @@ colorget=G/GR
 keywords1=W+/GR
 keywords2=RB+/GR
 keywords3=GR+/GR
-keywords4=RB+/GR
+keywords5=RB+/GR
 quotes=N+/GR
 scomm=RB/GR
 startline=B+/GR
