new plugins added to build files

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -66,8 +66,10 @@ p8=plug_go_fmt.hrb,go,Format code
 p9=plug_chartable.hrb,,CharTable
 p10=plug_calculator.hrb,,Calcularor
 p11=plug_tetris.hrb,,Tetris
-p12=plug_webservices.hrb,,WebServices
-p13=plug_vcs.hrb,,Git/Fossil
+p12=plug_sokoban.hrb,,Sokoban
+p13=plug_strek.hrb,,StarTrek
+p14=plug_webservices.hrb,,WebServices
+p15=plug_vcs.hrb,,Git/Fossil
 
 [HILIGHT]
 ;colormain=BG+/B
