--- a/hbedit.ini
+++ b/hbedit.ini
@@ -65,9 +65,9 @@ p7=plug_go_build.hrb,go,Build
 p8=plug_go_fmt.hrb,go,Format code
 p9=plug_chartable.hrb,,CharTable
 p10=plug_calculator.hrb,,Calcularor
-p11=plug_tetris.hrb,,Tetris
-p12=plug_sokoban.hrb,,Sokoban
-p13=plug_strek.hrb,,StarTrek
+p11=plug_gm_tetris.hrb,,Tetris
+p12=plug_gm_sokoban.hrb,,Sokoban
+p13=plug_gm_strek.hrb,,StarTrek
 p14=plug_webservices.hrb,,WebServices
 p15=plug_vcs.hrb,,Git/Fossil
 
