plugin and keywords for 1c language added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -247,7 +247,7 @@ mcomm={ }
 
 [LANG_1C]
 ext=.1c
-keywords1=do each enddo endif for if then while
-keywords2=для каждого если конецесли пока цикл конеццикла тогда
+keywords1=function procedure do each enddo endif for if elsif then while
+keywords2=функция конецфункции процедура конецпроцедуры для каждого если иначеесли конецесли пока цикл конеццикла тогда выбрать выбор когда иначе конец где из поместить сгруппировать по левое правое внутреннее полное соединение
 scomm=//
 brackets=On
