Fixed problem with opening files, which have cyrillic names

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -247,7 +247,7 @@ mcomm={ }
 
 [LANG_1C]
 ext=.1c
-keywords1=function procedure do each enddo endif for if elsif then while
-keywords2=функция конецфункции процедура конецпроцедуры для каждого если иначеесли конецесли пока цикл конеццикла тогда выбрать выбор когда иначе конец где из поместить сгруппировать по левое правое внутреннее полное соединение
+keywords1=do each enddo endif for if elsif else then while function procedure endfunction endprocedure
+keywords2=для каждого если иначеесли конецесли пока цикл конеццикла тогда выбрать выбор когда иначе конец где из поместить сгруппировать по левое правое внутреннее полное соединение функция конецфункции процедура конецпроцедуры 
 scomm=//
 brackets=On
