--- a/hbedit.ini
+++ b/hbedit.ini
@@ -183,7 +183,7 @@ startline=B+/GR
 mcomm=RB/GR
 
 [LANG_PRG]
-ext=.prg
+ext=.prg.ch
 plugin=plug_prg_init.hrb
 keywords1=and case class data do else elseif end endcase endclass enddo endif exit external field for func function if local loop memvar method next or private proc procedure public request return set seek skip static switch use while
 keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dbgoto dbseek dbselectarea dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif inkey isalpha isdigit islower left len lower ltrim ordsetfocus rat recno right round set str strtran stuff substr trim updated upper val valtype year
@@ -194,7 +194,7 @@ case=off
 brackets=On
 
 [LANG_C]
-ext=.c.cpp
+ext=.c.cpp.h
 keywords1=auto break case continue default do exit else enum extern for goto if return short sizeof static struct switch typedef union while
 keywords2=fopen fclose open close memcpy memset sprintf sscanf strlen strchr strnchr strcmp strncmp strcpy strncpy
 keywords3=char double float int long NULL register unsigned void
