--- a/hbedit.ini
+++ b/hbedit.ini
@@ -195,6 +195,7 @@ brackets=On
 
 [LANG_C]
 ext=.c.cpp.h
+plugin=plug_c_init.hrb
 keywords1=auto break case continue default do exit else enum extern for goto if return short sizeof static struct switch typedef union while
 keywords2=fopen fclose open close memcpy memset sprintf sscanf strlen strchr strnchr strcmp strncmp strcpy strncpy
 keywords3=char double float int long NULL register unsigned void
