--- a/hbedit.ini
+++ b/hbedit.ini
@@ -197,7 +197,7 @@ brackets=On
 ext=.c.cpp.h
 plugin=plug_c_init.hrb
 keywords1=auto break case continue default do exit else enum extern for goto if return short sizeof static struct switch typedef union while
-keywords2=fopen fclose open close memcpy memset sprintf sscanf strlen strchr strnchr strcmp strncmp strcpy strncpy
+keywords2=memcpy memset memcmp printf scanf sprintf sscanf strlen strchr strrchr strnchr strcmp strncmp strcat strncat strcpy strncpy strpbrk malloc realloc free fopen fclose fseek fread fwrite
 keywords3=char double float int long NULL register unsigned void
 keywords4=HB_FUNC hb_parl hb_parni hb_parc hb_retl hb_retni hb_retc
 scomm=//
