--- a/hbedit.ini
+++ b/hbedit.ini
@@ -25,6 +25,7 @@ screen_height=30
 ;incsearch=off
 ;pathinhead=off
 autoindent=on
+autocomplete=on
 ;syntax=On
 ; savehis: 0 - don't save the history, 1 (default) - save in hbedit directory,
 ; 2 - save in a current directory.
