'autodelay' option added to set a delay before autocompetion appears.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -26,6 +26,9 @@ screen_height=30
 ;pathinhead=off
 autoindent=on
 autocomplete=on
+;The value of 'autodelay' is a number of seconds before a hint appears,
+; 0 - default (appears after Tab pressing only).
+;autodelay=1
 ;syntax=On
 ; savehis: 0 - don't save the history, 1 (default) - save in hbedit directory,
 ; 2 - save in a current directory.
