Fixes. plug_go_init added, #define's added to C autocompetion data.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -212,6 +212,7 @@ brackets=On
 
 [LANG_GO]
 ext=.go
+plugin=plug_go_init.hrb
 keywords1= bool break case const else false for func if import int8 int16 int32 int map nil package range return string struct switch true type var
 keywords2=append make
 scomm=//
@@ -225,8 +226,9 @@ mcomm=< >
 
 [LANG_PHP]
 ext=.php
-keywords1=as catch echo else false foreach function global if new null return true try
-keywords2=array empty isset require strpos substr
+keywords1=abstract and array as break callable case catch class clone const continue declare default die do echo else elseif empty enddeclare endfor endforeach endif endswitch endwhile eval exit extends final finally fn for foreach function global goto if implements include include_once instanceof insteadof interface isset list namespace new or print private protected public require require_once return static switch throw trait try unset use var while xor yield
+keywords2=null bool boolean false true int integer float double real string object
+keywords3=gettype settype is_array is_bool is_float is_int is_null is_string is_numeric strpos substr
 scomm=//
 mcomm=/* */
 case=on
