--- a/hbedit.ini
+++ b/hbedit.ini
@@ -213,8 +213,9 @@ brackets=On
 [LANG_GO]
 ext=.go
 plugin=plug_go_init.hrb
-keywords1= bool break case const else false for func if import int8 int16 int32 int map nil package range return string struct switch true type var
-keywords2=append make
+keywords1= break case chan const continue default defer else fallthrough for func go goto if import interface map package range return select struct switch true type var
+keywords2= bool byte rune string error false true iota nil int8 int16 int32 int64 int uint8 uint16 uint32 uint64 uint  float32 float64 complex128 complex64 
+keywords3= append cap close complex copy delete imag len make new panic real recover
 scomm=//
 mcomm=/* */
 case=on
