'autovertical' option added.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -29,6 +29,9 @@ autocomplete=on
 ;The value of 'autodelay' is a number of seconds before a hint appears,
 ; 0 - default (appears after Tab pressing only).
 ;autodelay=1
+;If autovertical is On, every paste of a multiline text to a position,
+; except first, is treated as a vertical block
+;autovertical=off
 ;syntax=On
 ; savehis: 0 - don't save the history, 1 (default) - save in hbedit directory,
 ; 2 - save in a current directory.
