'quotes' option added for hilighting. Lisp_run implementation started.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -238,6 +238,13 @@ mcomm=/* */
 case=on
 brackets=On
 
+[LANG_LISP]
+ext=.lisp.scm
+keywords1=atom car cdr cons defun equal label lambda quote 
+scomm=;
+case=off
+brackets=On
+
 [LANG_INI]
 ext=.ini
 scomm=;
