Fixes, Lisp evaluation module extended.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -192,7 +192,7 @@ mcomm=RB/GR
 [LANG_PRG]
 ext=.prg.ch
 plugin=plug_prg_init.hrb
-keywords1=and case class data do else elseif end endcase endclass enddo endif exit external field for func function if local loop memvar method next or private proc procedure public request return set seek skip static switch use while
+keywords1=and case class data do each else elseif end endcase endclass enddo endif endswitch exit external field for func function if local loop memvar method next otherwise or private proc procedure public request return set seek skip static switch use while
 keywords2=aadd abs adel aeval afill ains alert alias alltrim array asc ascan asize asort at bof chr col ctod curdir date day dbgoto dbseek dbselectarea dtoc dtos empty eof eval fclose fcreate ferase file fopen found fread fseek fwrite hb_at hb_rat iif inkey isalpha isdigit islower left len lower ltrim ordsetfocus rat recno right round set str strtran stuff substr trim updated upper val valtype year
 scomm=//
 mcomm=/* */
@@ -240,7 +240,7 @@ brackets=On
 
 [LANG_LISP]
 ext=.lisp.scm
-keywords1=atom car cdr cons defun equal label lambda quote 
+keywords1=atom car cdr cond cons defun equal label lambda quote 
 scomm=;
 case=off
 brackets=On
