--- a/hbedit.ini
+++ b/hbedit.ini
@@ -240,7 +240,7 @@ brackets=On
 
 [LANG_LISP]
 ext=.lisp.scm
-keywords1=atom car cdr cond cons defun equal label lambda quote 
+keywords1=atom car cdr cond cons defun eq equal label lambda quote 
 scomm=;
 case=off
 brackets=On
