Fixes, few commands added (null, list, caddar, cddar, cdar)

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -240,7 +240,7 @@ brackets=On
 
 [LANG_LISP]
 ext=.lisp.scm
-keywords1=atom car caar cadr cadar caddr cdr cond cons defun eq equal label lambda quote 
+keywords1=atom car caar cadr cadar caddar caddr cdr cdar cddr cddar cond cons defun eq equal label lambda list null quote 
 scomm=;
 case=off
 brackets=On
