--- a/hbedit.ini
+++ b/hbedit.ini
@@ -244,6 +244,7 @@ keywords1=atom car caar cadr cadar caddar caddr cdr cdar cddr cddar cond cons de
 scomm=;
 case=off
 brackets=On
+quotes="
 
 [LANG_INI]
 ext=.ini
