--- a/hbedit.ini
+++ b/hbedit.ini
@@ -240,7 +240,7 @@ brackets=On
 
 [LANG_LISP]
 ext=.lisp.scm
-keywords1=atom car caar cadr cadar caddar caddr cdr cdar cddr cddar cond cons defun eq equal label lambda list null quote 
+keywords1=atom car caar caaar caadr cadr cadar caddar caddr cdr cdar cdaar cdadr cddr cddar cdddr cond cons defun eq equal label lambda list null quote 
 scomm=;
 case=off
 brackets=On
