defunhb and load functions added - it is possible to use Harbour functions now.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -240,7 +240,7 @@ brackets=On
 
 [LANG_LISP]
 ext=.lisp.scm
-keywords1=and append atom car caar caaar caadr cadr cadar caddar caddr cdr cdar cdaar cdadr cddr cddar cdddr cond cons defun eq equal label lambda list not null or quote pair set setq
+keywords1=and append atom car caar caaar caadr cadr cadar caddar caddr cdr cdar cdaar cdadr cddr cddar cdddr cond cons defun defunhb eq equal label lambda list load not null or quote pair set setq
 scomm=;
 case=off
 brackets=On
