plug_lisp_run.prg renamed to plug_init_run.prg and convrted to init module for Lisp.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -240,6 +240,7 @@ brackets=On
 
 [LANG_LISP]
 ext=.lisp.lsp.scm
+plugin=plug_lisp_init.hrb
 keywords1=and append atom car caar caaar caadr cadr cadar caddar caddr cdr cdar cdaar cdadr cddr cddar cdddr cond cons defun defunhb eq equal label lambda length list load not null numberp or quote pair set setq
 scomm=;
 case=off
