--- a/hbedit.ini
+++ b/hbedit.ini
@@ -224,6 +224,14 @@ mcomm=/* */
 case=on
 brackets=On
 
+[LANG_PYTHON]
+ext=.py
+keywords1=and as assert break class continue def del elif else except finally false for from global if import in is lambda nonlocal None not or pass raise return True try while with yield
+keywords2=abs all any ascii bin bool breakpoint bytearray bytes callable chr classmethod compile complex delattr dict dir divmod enumerate eval exec filter float format frozenset getattr globals hasattr hash help hex id input int isinstance issubclass iter len list locals map max memoryview min next object oct open ord pow print property range repr reversed round set setattr slice sorted staticmethod str sum super tuple type vars zip __import__
+scomm=#
+case=on
+brackets=On
+
 [LANG_XML]
 ext=.xml.fb2.htm.html
 mcomm=< >
