Plugin added: python functions list.

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -70,13 +70,14 @@ p5=plug_c_spis.hrb,c,Functions list,Alt-L
 p6=plug_go_run.hrb,go,Run code,Alt-R
 p7=plug_go_build.hrb,go,Build
 p8=plug_go_fmt.hrb,go,Format code
-p9=plug_chartable.hrb,,CharTable
-p10=plug_calculator.hrb,,Calcularor
-p11=plug_gm_tetris.hrb,,Tetris
-p12=plug_gm_sokoban.hrb,,Sokoban
-p13=plug_gm_strek.hrb,,StarTrek
-p14=plug_webservices.hrb,,WebServices
-p15=plug_vcs.hrb,,Git/Fossil
+p9=plug_py_spis.hrb,py,Functions list,Alt-L
+p10=plug_chartable.hrb,,CharTable
+p11=plug_calculator.hrb,,Calcularor
+p12=plug_gm_tetris.hrb,,Tetris
+p13=plug_gm_sokoban.hrb,,Sokoban
+p14=plug_gm_strek.hrb,,StarTrek
+p15=plug_webservices.hrb,,WebServices
+p16=plug_vcs.hrb,,Git/Fossil
 
 [HILIGHT]
 ;colormain=BG+/B
@@ -224,7 +225,7 @@ mcomm=/* */
 case=on
 brackets=On
 
-[LANG_PYTHON]
+[LANG_PY]
 ext=.py
 keywords1=and as assert break class continue def del elif else except finally false for from global if import in is lambda nonlocal None not or pass raise return True try while with yield
 keywords2=abs all any ascii bin bool breakpoint bytearray bytes callable chr classmethod compile complex delattr dict dir divmod enumerate eval exec filter float format frozenset getattr globals hasattr hash help hex id input int isinstance issubclass iter len list locals map max memoryview min next object oct open ord pow print property range repr reversed round set setattr slice sorted staticmethod str sum super tuple type vars zip __import__
