--- a/hbedit.ini
+++ b/hbedit.ini
@@ -62,7 +62,6 @@ cp3=RUKOI8
 cp4=UTF8
 
 [PLUGINS]
-p1=plug_prg_spis.hrb,prg,Functions list,Alt-L
 p2=plug_prg_run.hrb,prg,Run code,Alt-R
 p3=plug_prg_compile.hrb,prg,Compile plugin
 p4=plug_go_spis.hrb,go,Functions list,Alt-L
@@ -239,6 +238,7 @@ mcomm=< >
 
 [LANG_PHP]
 ext=.php
+plugin=plug_php_init.hrb
 keywords1=abstract and array as break callable case catch class clone const continue declare default die do echo else elseif empty enddeclare endfor endforeach endif endswitch endwhile eval exit extends final finally fn for foreach function global goto if implements include include_once instanceof insteadof interface isset list namespace new or print private protected public require require_once return static switch throw trait try unset use var while xor yield
 keywords2=null bool boolean false true int integer float double real string object
 keywords3=gettype settype is_array is_bool is_float is_int is_null is_string is_numeric strpos substr
