few keywords added

--- a/hbedit.ini
+++ b/hbedit.ini
@@ -241,7 +241,8 @@ ext=.php
 plugin=plug_php_init.hrb
 keywords1=abstract and array as break callable case catch class clone const continue declare default die do echo else elseif empty enddeclare endfor endforeach endif endswitch endwhile eval exit extends final finally fn for foreach function global goto if implements include include_once instanceof insteadof interface isset list namespace new or print private protected public require require_once return static switch throw trait try unset use var while xor yield
 keywords2=null bool boolean false true int integer float double real string object
-keywords3=gettype settype is_array is_bool is_float is_int is_null is_string is_numeric strpos substr
+keywords3=define error_log gettype settype is_array is_bool is_float is_int is_null is_string is_numeric chr ltrim rtrim trim strlen strpos stripos strtok substr substr_count
+keywords4=file_get_contents file_put_contents json_decode json_encode curl_init curl_close curl_exec curl_setopt curl_errno curl_error
 scomm=//
 mcomm=/* */
 case=on
